@@ -19,3 +19,4 @@
 /apha_map/modify_date_column_to_allow_null.sql
 /apha_map/rename_column_link_to_declaration.sql
 /apha_map/increase_entity_name_column_length.sql
+/google_mobility/create.sql
